--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-icons-kit": "^2.0.0",
+    "react-password-toggle-icon": "^1.1.5",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1"
   },
