--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -36,6 +36,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-appwrite": "^0.6.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.16.1",
