--- a/weboldal/package.json
+++ b/weboldal/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.9",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-icons-kit": "^2.0.0",
-    "react-password-toggle-icon": "^1.1.5",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1"
   },
