--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -25,6 +25,7 @@
     "expo-file-system": "^18.0.7",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.16",
     "expo-splash-screen": "~0.29.19",
@@ -37,9 +38,11 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-appwrite": "^0.6.0",
+    "react-native-blob-util": "^0.21.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
@@ -47,6 +50,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "react-navigation": "^5.0.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
