--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -20,12 +20,15 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "appwrite": "^16.1.0",
+    "buffer": "^6.0.3",
     "expo": "~52.0.24",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-document-picker": "^13.0.2",
     "expo-file-system": "^18.0.7",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "^16.0.5",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.16",
