--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/common": "^11.0.8",
+    "@nestjs/core": "^11.0.8",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^11.0.8",
+    "@nestjs/swagger": "^11.0.3",
+    "@nestjs/testing": "^11.0.8",
     "@prisma/client": "^5.22.0",
     "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
@@ -41,7 +43,6 @@
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.2",
