--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.8",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.8",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.8",
@@ -34,6 +35,7 @@
     "class-validator": "^0.14.1",
     "cloudinary": "^2.5.1",
     "cloudinary-build-url": "^0.2.4",
+    "dotenv": "^16.4.7",
     "express-session": "^1.18.1",
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.22.0",
