--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -15,12 +15,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@expo/vector-icons": "^14.0.4",
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "appwrite": "^16.1.0",
     "buffer": "^6.0.3",
+    "cloudinary": "^2.5.1",
     "expo": "~52.0.24",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -37,6 +40,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "lucide-react-native": "^0.475.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
