--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.14.1",
     "cloudinary": "^2.5.1",
     "cloudinary-build-url": "^0.2.4",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express-session": "^1.18.1",
     "multer": "^1.4.5-lts.1",
