--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/common": "^11.0.8",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.8",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.8",
     "@nestjs/swagger": "^11.0.3",
@@ -44,6 +45,7 @@
     "express-session": "^1.18.1",
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.22.0",
+    "prisma-error-enum": "^0.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
