--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@nestjs/core": "^11.0.8",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.8",
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/testing": "^11.0.8",
@@ -44,6 +45,7 @@
     "dotenv": "^16.4.7",
     "express-session": "^1.18.1",
     "multer": "^1.4.5-lts.1",
+    "passport-jwt": "^4.0.1",
     "prisma": "^5.22.0",
     "prisma-error-enum": "^0.1.3",
     "reflect-metadata": "^0.2.0",
