--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -35,6 +35,7 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.16",
+    "expo-secure-store": "^14.0.1",
     "expo-splash-screen": "~0.29.19",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
