--- a/backend/package.json
+++ b/backend/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.2",
