--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -21,6 +21,7 @@
     "@react-native-community/blur": "^4.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@shopify/flash-list": "1.7.3",
     "appwrite": "^16.1.0",
     "buffer": "^6.0.3",
     "cloudinary": "^2.5.1",
@@ -57,12 +58,12 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-navigation": "^5.0.0",
-    "tailwindcss": "^3.4.17",
-    "@shopify/flash-list": "1.7.3"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
