--- a/weboldal/package.json
+++ b/weboldal/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^14.0.4",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
+    "lucide-react": "^0.479.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
