--- a/weboldal/package.json
+++ b/weboldal/package.json
@@ -20,7 +20,8 @@
     "react-icons": "^5.4.0",
     "react-icons-kit": "^2.0.0",
     "react-router": "^7.1.1",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
