Working on Profile Page & additional features

--- a/weboldal/package.json
+++ b/weboldal/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@shadcn/ui": "^0.0.4",
+    "@syncfusion/ej2-react-calendars": "^28.2.11",
     "@tailwindcss/vite": "^4.0.14",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "flowbite-react": "^0.10.2",
     "lucide-react": "^0.479.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-icons-kit": "^2.0.0",
