--- a/backend/package.json
+++ b/backend/package.json
@@ -31,8 +31,10 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.8",
+    "@nestjs/platform-socket.io": "^11.0.12",
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/testing": "^11.0.8",
+    "@nestjs/websockets": "^11.0.12",
     "@prisma/client": "^5.22.0",
     "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
@@ -48,7 +50,9 @@
     "passport-jwt": "^4.0.1",
     "prisma-error-enum": "^0.1.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
