--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -63,6 +63,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-navigation": "^5.0.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
