--- a/weboldal/package.json
+++ b/weboldal/package.json
@@ -29,10 +29,12 @@
     "react-icons-kit": "^2.0.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7",
-    "react-toastify": "^11.0.5"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
