--- a/react-native-app/package.json
+++ b/react-native-app/package.json
@@ -77,6 +77,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
+    "typedoc": "^0.28.2",
     "typescript": "^5.3.3"
   },
   "private": true
